# 99ML

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  THIRD_ORDER_CYBERNETICS.md
.github/agents/: AUTOGNOSIS.md  Arc-Halo Database Integration Enhancement Summary.md  Deep Tree Echo State Network with Electromagnetic Dynamics.md  Extended Definitions from Schwarz's Holistic Metam.md  Final Cognitive Architecture_ Complete Integration.md  INTEGRATION_PATTERNS (2).md  KAWAII_HEXAPOD_COGPRIME_INTEGRATION (2).md  P9ML-README (2).md  README (36).md  RELEVANCE_REALIZATION_IMPLEMENTATION_SUMMARY.md  RROS_KERNEL_SUMMARY.md  Res1997.md  SILICON_SAGE_OPENCOG_ENGINE (1).md  Silicon Sage AGI - Complete Integration.md  Synopsis (2) (1).md  The Dual Process Architecture_Winiwarter.md  The Third Order Cybernetics of Eric Schwarz and Ma.md  Transformation_Sequence (1).md  VERVAEKE_4E_INTEGRATION_SUMMARY.md  __SUMMARY OF THE MAIN FEATURES OF A HOLISTIC METAM.md  __The Holistic Metamodel in Cognitive Science_ Und.md  bootstrap-gizmos.json  financial-hardware-implementation.md  my-agent.md  synopsis-architecture.md
_codeql_build_dir/: third_order_cybernetics_demo
examples/: autognosis_test.c  neural-symbolic-demo.scm  neural_symbolic_demo.c  third_order_cybernetics_demo.c
include/: neural_physics.h  third_order_cybernetics.h
scheme/: cognitive-grammar.scm
src/: neural_physics.c  scheme_neural_bridge.c  third_order_cybernetics.c
